docs.kosli.com/content/legacy_ref/v2.11.12/kosli_attach-policy.md
---
title: "kosli attach-policy"
beta: false
deprecated: false
summary: "Attach a policy to one or more Kosli environments.  "
---

# kosli attach-policy

## Synopsis

Attach a policy to one or more Kosli environments.  

```shell
kosli attach-policy POLICY-NAME [flags]
```

## Flags
| Flag | Description |
| :--- | :--- |
|    -D, --dry-run  |  [optional] Run in dry-run mode. When enabled, no data is sent to Kosli and the CLI exits with 0 exit code regardless of any errors.  |
|    -e, --environment strings  |  the list of environment names to attach the policy to  |
|    -h, --help  |  help for attach-policy  |


## Flags inherited from parent commands
| Flag | Description |
| :--- | :--- |
|    -a, --api-token string  |  The Kosli API token.  |
|    -c, --config-file string  |  [optional] The Kosli config file path. (default "kosli")  |
|        --debug  |  [optional] Print debug logs to stdout. A boolean flag https://docs.kosli.com/faq/#boolean-flags (default false)  |
|    -H, --host string  |  [defaulted] The Kosli endpoint. (default "https://app.kosli.com")  |
|        --http-proxy string  |  [optional] The HTTP proxy URL including protocol and port number. e.g. 'http://proxy-server-ip:proxy-port'  |
|    -r, --max-api-retries int  |  [defaulted] How many times should API calls be retried when the API host is not reachable. (default 3)  |
|        --org string  |  The Kosli organization.  |


## Examples Use Cases

These examples all assume that the flags  `--api-token`, `--org`, `--host`, (and `--flow`, `--trail` when required), are set/provided. 

**attach a previously created policy to multiple environment**

```shell
kosli attach-policy yourPolicyName 
	--environment yourFirstEnvironmentName 
	--environment yourSecondEnvironmentName 
```

